--- a/test_cases/input/input_brute_force.cfg
+++ b/test_cases/input/input_brute_force.cfg
@@ -37,7 +37,7 @@ boundary_conditions        0 0 0
 external_field_magnitude   0.0
 external_field_normal      0.0 0.0 1.0
 ### µSpin
-mu_s                       2.0
+mu_s                       1.0
 
 ### Uniaxial anisotropy constant [meV]
 anisotropy_magnitude       0.0
@@ -48,10 +48,10 @@ anisotropy_normal          0.0 0.0 1.0
 ddi_method                 fft
 
 ### DDI number of periodic images in (a b c)
-ddi_n_periodic_images      4 4 4
+ddi_n_periodic_images      10 10 10
 
 ### DDI cutoff radius (if cutoff is used)
-ddi_radius                 0.0
+ddi_radius                 10.0
 
 ### Pairs
 n_interaction_pairs 0
@@ -73,7 +73,13 @@ bravais_lattice sc
 
 ### Number of basis cells along principal
 ### directions (a b c)
-n_basis_cells 100 100 1
+n_basis_cells 5 5 5
+
+basis
+3
+0 0.4 0.8
+0.2 0.4 0.1
+0.5 0.5 0.5
 ################# End Geometry ###################
 
 
