Addes test mu_s_scaling

--- a/test_cases/input/input_mu_s_scaling_1.cfg
+++ b/test_cases/input/input_mu_s_scaling_1.cfg
@@ -69,17 +69,12 @@ i j   da db dc    Jij   Dij  Dijx Dijy Dijz
 lattice_constant 1.0
 
 ### The bravais lattice type
-bravais_lattice hex2d
+bravais_lattice sc
 
 ### Number of basis cells along principal
 ### directions (a b c)
-n_basis_cells 5 5 5
+n_basis_cells 100 100 1
 
-basis
-3
-0 0.4 0.8
-0.2 0.4 0.1
-0.5 0.5 0.5
 ################# End Geometry ###################
 
 
