--- a/test_cases/input/input_mu_s_scaling_2.cfg
+++ b/test_cases/input/input_mu_s_scaling_2.cfg
@@ -37,7 +37,7 @@ boundary_conditions        0 0 0
 external_field_magnitude   0.0
 external_field_normal      0.0 0.0 1.0
 ### µSpin
-mu_s                       1.0
+mu_s                       2.0 0.0 0.0 0.0
 
 ### Uniaxial anisotropy constant [meV]
 anisotropy_magnitude       0.0
@@ -69,17 +69,18 @@ i j   da db dc    Jij   Dij  Dijx Dijy Dijz
 lattice_constant 1.0
 
 ### The bravais lattice type
-bravais_lattice hex2d
+bravais_lattice sc
 
 ### Number of basis cells along principal
 ### directions (a b c)
-n_basis_cells 5 5 5
+n_basis_cells 100 100 1
 
 basis
-3
-0 0.4 0.8
-0.2 0.4 0.1
-0.5 0.5 0.5
+4
+0 0 0
+0.5 0 0
+0 0.5 0
+0.5 0.5 0
 ################# End Geometry ###################
 
 
